[STD-45] Fixing world repository dependency - Fixing camera - Optimizing yaw and pitch transformations - Fixing yaw and pitch degree values instead of radian values - Adding new instanced mesh component - Adding interface for component - Adding components to hierarchy tree - Fixing injection on hierarchy panel - Removing empty systems - Creating instanced mesh system - Fixing window startup